--- a/.buildkite/scaling/pipeline.yml
+++ b/.buildkite/scaling/pipeline.yml
@@ -11,7 +11,7 @@ env:
 agents:
   config: cpu
   queue: central
-  slurm_time: 23:00:00
+#  slurm_time: 23:00:00
 
 steps:
   - label: "init :computer:"
@@ -146,179 +146,6 @@ steps:
       - "low-resolution_sypd.pdf"
       - "low-resolution_Scaling.pdf"
       - "low-resolution_Scaling_efficiency.pdf"
-    agents:
-      config: cpu
-      queue: central
-      slurm_nodes: 1
-      slurm_tasks_per_node: 1
-
-  - wait
-
-  - group: "ClimaAtmos high-resolution scaling tests"
-    steps:
-
-    - label: ":computer: MPI Held-Suarez high resolution scaling test(ρe_tot) - (1) process"
-      command:
-        - echo "$(bash .buildkite/scaling/sphere_held_suarez.sh 1 high enable)"
-      artifact_paths:
-        - "sphere_held_suarez_high_res_rhoe_1/scaling_data_1_processes.jld2"
-        - "sphere_held_suarez_high_res_rhoe_1/report.1.nsys-rep"
-      env:
-        CLIMACORE_DISTRIBUTED: "MPI"
-        NPROCS: 1
-      agents:
-        config: cpu
-        queue: central
-        slurm_nodes: 1
-        slurm_tasks_per_node: 1
-        slurm_mem: 0
-        slurm_exclusive:
-
-    - label: ":computer: MPI Held-Suarez high resolution scaling test(ρe_tot) - (2) processes"
-      command:
-        - echo "$(bash .buildkite/scaling/sphere_held_suarez.sh 2 high enable)"
-      artifact_paths:
-        - "sphere_held_suarez_high_res_rhoe_2/scaling_data_2_processes.jld2"
-        - "sphere_held_suarez_high_res_rhoe_2/report.2.nsys-rep"
-      env:
-        CLIMACORE_DISTRIBUTED: "MPI"
-        NPROCS: 2
-      agents:
-        config: cpu
-        queue: central
-        slurm_nodes: 1
-        slurm_tasks_per_node: 2
-        slurm_mem: 0
-        slurm_exclusive:
-
-    - label: ":computer: MPI Held-Suarez high resolution scaling test(ρe_tot) - (4) processes"
-      command:
-        - echo "$(bash .buildkite/scaling/sphere_held_suarez.sh 4 high enable)"
-      artifact_paths:
-        - "sphere_held_suarez_high_res_rhoe_4/scaling_data_4_processes.jld2"
-        - "sphere_held_suarez_high_res_rhoe_4/report.4.nsys-rep"
-      env:
-        CLIMACORE_DISTRIBUTED: "MPI"
-        NPROCS: 4
-      agents:
-        config: cpu
-        queue: central
-        slurm_nodes: 1
-        slurm_tasks_per_node: 4
-        slurm_mem: 0
-        slurm_exclusive:
-
-    - label: ":computer: MPI Held-Suarez high resolution scaling test(ρe_tot) - (8) processes"
-      command:
-        - echo "$(bash .buildkite/scaling/sphere_held_suarez.sh 8 high enable)"
-      artifact_paths:
-        - "sphere_held_suarez_high_res_rhoe_8/scaling_data_8_processes.jld2"
-        - "sphere_held_suarez_high_res_rhoe_8/report.8.nsys-rep"
-      env:
-        CLIMACORE_DISTRIBUTED: "MPI"
-        NPROCS: 8
-      agents:
-        config: cpu
-        queue: central
-        slurm_nodes: 1
-        slurm_tasks_per_node: 8
-        slurm_mem: 0
-        slurm_exclusive:
-
-    - label: ":computer: MPI Held-Suarez high resolution scaling test(ρe_tot) - (16) processes"
-      command:
-        - echo "$(bash .buildkite/scaling/sphere_held_suarez.sh 16 high enable)"
-      artifact_paths:
-        - "sphere_held_suarez_high_res_rhoe_16/scaling_data_16_processes.jld2"
-        - "sphere_held_suarez_high_res_rhoe_16/report.16.nsys-rep"
-      env:
-        CLIMACORE_DISTRIBUTED: "MPI"
-        NPROCS: 16
-      agents:
-        config: cpu
-        queue: central
-        slurm_nodes: 1
-        slurm_tasks_per_node: 16
-        slurm_mem: 0
-        slurm_exclusive:
-
-    - label: ":computer: MPI Held-Suarez high resolution scaling test(ρe_tot) - (32) processes"
-      command:
-        - echo "$(bash .buildkite/scaling/sphere_held_suarez.sh 32 high enable)" 
-      artifact_paths:
-        - "sphere_held_suarez_high_res_rhoe_32/scaling_data_32_processes.jld2"
-      env:
-        CLIMACORE_DISTRIBUTED: "MPI"
-        NPROCS: 32
-      agents:
-        config: cpu
-        queue: central
-        slurm_nodes: 1
-        slurm_tasks_per_node: 32
-        slurm_mem: 0
-        slurm_exclusive:
-
-    - label: ":computer: MPI Held-Suarez high resolution scaling test(ρe_tot) - (64) processes"
-      command:
-        - echo "$(bash .buildkite/scaling/sphere_held_suarez.sh 64 high disable)" 
-      artifact_paths:
-        - "sphere_held_suarez_high_res_rhoe_64/scaling_data_64_processes.jld2"
-      env:
-        CLIMACORE_DISTRIBUTED: "MPI"
-        NPROCS: 64
-      agents:
-        config: cpu
-        queue: central
-        slurm_nodes: 2
-        slurm_tasks_per_node: 32
-        slurm_mem: 0
-        slurm_exclusive:
-
-    - label: ":computer: MPI Held-Suarez high resolution scaling test(ρe_tot) - (128) processes"
-      command:
-        - echo "$(bash .buildkite/scaling/sphere_held_suarez.sh 128 high disable)" 
-      artifact_paths:
-        - "sphere_held_suarez_high_res_rhoe_128/scaling_data_128_processes.jld2"
-      env:
-        CLIMACORE_DISTRIBUTED: "MPI"
-        NPROCS: 128
-      agents:
-        config: cpu
-        queue: central
-        slurm_nodes: 4
-        slurm_tasks_per_node: 32
-        slurm_mem: 0
-        slurm_exclusive:
-
-    - label: ":computer: MPI Held-Suarez high resolution scaling test(ρe_tot) - (256) processes"
-      command:
-        - echo "$(bash .buildkite/scaling/sphere_held_suarez.sh 256 high disable)" 
-      artifact_paths:
-        - "sphere_held_suarez_high_res_rhoe_256/scaling_data_256_processes.jld2"
-      env:
-        CLIMACORE_DISTRIBUTED: "MPI"
-        NPROCS: 256
-      agents:
-        config: cpu
-        queue: central
-        slurm_nodes: 8
-        slurm_tasks_per_node: 32
-        slurm_mem: 0
-        slurm_exclusive:
-
-  - wait
-
-  - label: ":computer: scaling plots (high-resolution simulations)"
-    key: "cpu_scaling_plots_high-resolution"
-    command:
-      - "julia --color=yes --project=examples examples/hybrid/plot_scaling_results.jl --job_id sphere_held_suarez_high_res_rhoe"
-    artifact_paths:
-      - "high-resolution_sypd.png"
-      - "high-resolution_Scaling.png"
-      - "high-resolution_Scaling_efficiency.png"
-      - "high-resolution_sypd.pdf"
-      - "high-resolution_Scaling.pdf"
-      - "high-resolution_Scaling_efficiency.pdf"
     agents:
       config: cpu
       queue: central
