CompatHelper: bump compat for OrdinaryDiffEq to 6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,7 @@ IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 LambertW = "0.4"
 OperatorFlux = "0.1"
-OrdinaryDiffEq = "5.64.0"
+OrdinaryDiffEq = "5.64.0, 6"
 SciMLBase = "<1.51"
 StaticArrays = "1.4"
 StatsBase = "0.33"
